[tool.poetry]
name = "trad-poetry"
version = "0.1.0"
description = ""
authors = ["Alberto Martín <alberto.martin@cantab.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "^0.0.248"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.2"
unstructured = "^0.8.7"
ipywidgets = "^7.6.0"
sentence-transformers = "^2.2.2"
watchdog = "^3.0.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
