[tool.poetry]
name = "trad-poetry"
version = "0.1.0"
description = ""
authors = ["Alberto Martín <alberto.martin@cantab.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "^0.0.248"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.2"
unstructured = "^0.8.7"
ipywidgets = "^7.6.0"
sentence-transformers = "^2.2.2"
watchdog = "^3.0.0"
flask = "^2.3.2"
torch = "^2.0.1"
nvidia-cublas-cu11 = {url = "https://files.pythonhosted.org/packages/ce/41/fdeb62b5437996e841d83d7d2714ca75b886547ee8017ee2fe6ea409d983/nvidia_cublas_cu11-11.10.3.66-py3-none-manylinux1_x86_64.whl"}

[[tool.poetry.source]]
name = "nvidia-cublas-cu11"
url = "https://files.pythonhosted.org/packages/ce/41/fdeb62b5437996e841d83d7d2714ca75b886547ee8017ee2fe6ea409d983/nvidia_cublas_cu11-11.10.3.66-py3-none-manylinux1_x86_64.whl"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
